--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,11 @@ img {
   align-items: center;
   font-weight: var(--font-semi);
 }
+@media screen and (max-width: 340px) {
+  img.skills__img {
+    display: none;
+  }
+}
 @media screen and (max-width: 767px) {
   .nav__menu {
     position: fixed;
